Update profile and fix spacing between profile section and blog section in landing page

--- a/docs/index.css
+++ b/docs/index.css
@@ -50,6 +50,12 @@ body{
     padding-right: 15px;
 }
 
+.profile::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
 h1,h2,h3,h4,h5{
     color: var(--theme-accent-2);
 }
